--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "fumadocs-ui": "14.6.0",
     "geist": "^1.3.1",
     "idb": "^8.0.0",
+    "isolation-experiment": "./isolation-experiment/",
     "katex": "^0.16.11",
     "lucide-react": "^0.471.1",
     "mermaid": "^11.4.0",
